# mcdo-vlm-uncertainty

./: .gitignore  CODEBASE_STATE.md  CONTEXT_HANDOFF.md  DATA_SETUP.md  KEY_TAKEAWAYS.md  MC_Dropout_Status_Update.pptx  META_ANALYSIS.md  PERFORMANCE_GUIDE.md  PRELIM_FINDINGS.md  README.md  REPO_TREE_SUMMARY.md  STATE_OF_EXPLORATION_2026_03_04.md  UNIFIED_THEORY.md  chart_architecture.py  chart_metric_ranking.py  chart_module_scan.py  environment.yml  gaussian_ablation_test.py  paper_outline_v3.md  prelim_ablation.py  prelim_investigation.py  pyproject.toml  requirements.txt  residual_ablation_test.py  run  run_all_phases.py  setup_env.sh  spectral_ablation_test.py  spectral_smoke_test.py  validity_smoke_test.py
charts/: chart_ablation_method.py  chart_cross_model.py  chart_dropout_cliff.py  chart_landscape.py  chart_metric_taxonomy.py  chart_t_scaling.py
data/: imagenet_class_map.json
docs/: AGENT_RUNBOOK.md  CODEBASE_STATE.md  EXPERIMENT_ALGEBRA.md  META_ANALYSIS.md  PERFORMANCE_GUIDE.md  PERTURBATION_SEARCH_REPORT.md  PHASE_ONE_REPORT.md  STATE_OF_EXPLORATION_2026_03_04.md  THEMATIC_ANALYSIS.md  UNIFIED_THEORY.md  WHY_CLIP_VS_SIGLIP2.md  paper_outline_v3.md
exploratory/: ensemble_smoke_test.py  gaussian_ablation_test.py  pe_core_block_comparison.py  residual_ablation_test.py  spectral_ablation_test.py  spectral_smoke_test.py  validity_smoke_test.py
outputs/: block11_deep_test.json  cproj12_t_scaling.json  ensemble_smoke.json  gaussian_ablation_test.json  pe_core_block_comparison.json  pe_core_exp.json  pe_core_sweep.json  prelim_ablation.json  (+5 more)
(+117 files in other folders)
